name:                pure-dom
version:             0.8.0.0
synopsis:            Injection and management of DOM nodes backed by Pure views
homepage:            purehs.org/doc/pure-dom
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-dom.git

library
  build-depends:
    base,
    containers,
    pure-core,
    pure-default,
    pure-json,
    pure-lifted,
    pure-txt,
    pure-queue

  hs-source-dirs: src

  exposed-modules:
    Pure.DOM

  default-language: Haskell2010
